fixed anchor links from appearing behind header when clicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     border: none;
+    scroll-padding-top: 10rem;
 }
 
 a, a:hover, a:visited, a:active {
@@ -65,6 +66,8 @@ nav > a {
 
 .active {border-bottom: 1px solid #E8F3F5;}
 
+
+
 /* About box design */
 
 .about-box {
@@ -101,7 +104,6 @@ nav > a {
 #find-us {
     padding: 10px;
 	  border-radius: 10px;
-	  
     display:inline-block;
     margin:auto;
     margin-top: 100px;
